--- a/front-app/src/app.css
+++ b/front-app/src/app.css
@@ -4,6 +4,8 @@
   box-sizing: border-box;
 }
 #root {
+  display: flex;
+  justify-content: center;
   height: 100dvh;
   background-color: #fae9de;
   overflow: hidden;
@@ -12,7 +14,6 @@
 
 #app {
   background-color: #fae9de;
-  margin: 0 auto;
   display: flex;
   flex-flow: column nowrap;
   justify-content: center;
