reformulacao de layout admin/ajustes funcao de impressao

--- a/front-app/src/app.css
+++ b/front-app/src/app.css
@@ -32,6 +32,9 @@
   height: 67%;
   overflow: hidden !important;
 }
+.backgroundAdmin{
+  background-color: #ECEDEE;
+}
 
 #footer {
   border-radius: 35px;
